# gbp-pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
assets/: pre-push
gbp_pre_commit_hooks/: no_commit_to_branch.py
